# FCGR-SD_C-

./: .gitignore  .gitmodules  CMakeLists.txt  align.fasta  build_log.txt  cmake_log.txt  compare_rf.R  decenttree  log.txt  main.cpp  make.txt  out.tree  start.sh
TreeDist-2.9.2/: .RData
data/: align.fasta  align.fasta.bionj  align.fasta.contree  align.fasta.iqtree  align.fasta.mldist  align.fasta.splits.nex  align.fasta.treefile  steps-128_0.fasta  test.fas
include/: Seq.hpp  ThreadPool.h  fcgr.hpp  readSeq.hpp
logs/: log_GLS.txt
src/: ThreadPool.cpp  fcgr.cpp  readSeq.cpp
